--- a/web/src/features/hostdashboard/hostcalendar/styles/Calender.scss
+++ b/web/src/features/hostdashboard/hostcalendar/styles/Calender.scss
@@ -96,6 +96,7 @@ $breakpoint-xl: 1200px;
                             height: 50px;
                             border: $border;
                             a {
+                                color: #000;
                                 width: 100%;
                                 height: 100%;
                                 display: flex;
