--- a/web/src/features/bookingengine/listingdetails/styles/listingDetails2.css
+++ b/web/src/features/bookingengine/listingdetails/styles/listingDetails2.css
@@ -195,7 +195,7 @@ Reservation section
     font-weight: 400;
 }
 
-.date {
+.inputField {
     background-color: white;
     padding: 10px 20px;
     border-radius: 12px;
@@ -215,4 +215,16 @@ Reservation section
 .arrow {
     font-size: 18px;
     margin-top: 5px;
+}
+
+.guests-container {
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, sans-serif;
+    font-weight: 200;
+}
+
+.guests-inputFields {
+    display: flex;
+    flex-direction: row;
 }
