--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -1,89 +1,91 @@
-.main {
-    display: inline;
-}
+.listing-details {
 
-.listing-details-header {
+  .main {
+    display: inline;
+  }
+
+  .listing-details-header {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
     height: 60px;
-}
+  }
 
-.title{
+  .title {
     margin-left: 10px;
-}
+  }
 
-.backButton {
+  .backButton {
     text-decoration: underline;
-}
+  }
 
-/*
-Main Container
-*/
-.container {
+  /*
+  Main Container
+  */
+  .container {
     position: relative;
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin: 0 30px;
     padding: 0;
-}
+  }
 
-@media (min-width: 768px) {
+  @media (min-width: 768px) {
     .container {
-        flex-direction: row;
+      flex-direction: row;
     }
-}
+  }
 
-/*
-Images and details section
- */
-.property-container {
+  /*
+  Images and details section
+   */
+  .property-container {
     position: relative;
     flex: 2;
-}
+  }
 
-.image-section {
+  .image-section {
     position: relative;
     flex: 2;
-}
+  }
 
-/*
-Image galery
- */
-.image-gallery {
+  /*
+  Image galery
+   */
+  .image-gallery {
     display: grid;
     grid-template-columns: 1.7fr 1.3fr;
     grid-template-rows: repeat(1, 1fr);
     column-gap: 10px;
     align-items: center;
-}
+  }
 
-.main-image {
+  .main-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
     grid-row: span 2;
-}
+  }
 
-.small-images-container {
+  .small-images-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 10px;
     height: 100%;
-}
+  }
 
-.small-image {
+  .small-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
-}
+  }
 
-.rating-section {
+  .rating-section {
     position: absolute;
     top: 10px;
     left: 10px;
@@ -93,19 +95,19 @@ Image galery
     background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
     width: auto;
-}
+  }
 
-.rating-star {
+  .rating-star {
     color: gold;
     font-size: 14px;
-}
+  }
 
-.rating-rating {
+  .rating-rating {
     color: white;
     font-size: 14px;
-}
+  }
 
-.host-name {
+  .host-name {
     position: absolute;
     bottom: 10px;
     left: 10px;
@@ -116,42 +118,42 @@ Image galery
     display: inline-block;
     width: auto;
     color: white;
-}
+  }
 
-.price {
+  .price {
     font-size: 20px;
     font-weight: bold;
-}
+  }
 
-.price-night {
+  .price-night {
     color: #777;
-}
+  }
 
-.details {
+  .details {
     color: #666;
-}
+  }
 
-/*
-Reservation section
- */
-.booking-container {
+  /*
+  Reservation section
+   */
+  .booking-container {
     position: relative;
     flex: 1;
     background: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+  }
 
-.booking-title {
+  .booking-title {
     position: absolute;
     top: -30px;
     left: 10px;
     font-size: 18px;
     font-weight: 400;
-}
+  }
 
-.reserve-btn {
+  .reserve-btn {
     width: 100%;
     background: #28a745;
     color: white;
@@ -161,70 +163,72 @@ Reservation section
     font-size: 16px;
     cursor: pointer;
     margin-top: 10px;
-}
+  }
 
-.reserve-btn:hover {
+  .reserve-btn:hover {
     background: #218838;
-}
+  }
 
-.note {
+  .note {
     font-size: 12px;
     color: #777;
     text-align: center;
     margin-top: 5px;
-}
+  }
 
-.date-container {
+  .date-container {
     display: flex;
     align-items: center;
     gap: 20px;
     font-family: Arial, sans-serif;
     font-weight: 200;
-}
+  }
 
-.date-box {
+  .date-box {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-}
+  }
 
-.label {
+  .label {
     font-size: 16px;
     color: black;
     margin-bottom: 5px;
     font-weight: 400;
-}
+  }
 
-.inputField {
+  .inputField {
     background-color: white;
     padding: 10px 20px;
     border-radius: 12px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-size: 14px;
     text-align: left;
-}
+  }
 
-.nights-info {
+  .nights-info {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 14px;
     color: #666;
-}
+  }
 
-.arrow {
+  .arrow {
     font-size: 18px;
     margin-top: 5px;
-}
+  }
 
-.guests-container {
+  .guests-container {
     display: flex;
     flex-direction: column;
     font-family: Arial, sans-serif;
     font-weight: 200;
-}
+  }
 
-.guests-inputFields {
+  .guests-inputFields {
     display: flex;
     flex-direction: row;
+  }
+
 }
