--- a/web/src/components/base/SearchBar.css
+++ b/web/src/components/base/SearchBar.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: #0D9813;
+  --secondary-color: #003366;
+}
+
 .Search-bar {
   width: 42rem;
   margin: auto;
@@ -835,7 +840,7 @@
   text-align: center;
 }
 
-.Search-close-guest-dropdown{
+.Search-close-guest-dropdown {
   position: absolute;
   padding: 0.3rem;
   right: 10px;
