--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -6,6 +6,13 @@
     padding: 0;
 }
 
+
+:root {
+    --primary-color: #0D9813;
+    --secondary-color: #003366;
+}
+
+
 html,
 body {
     width: 100%;
