--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -10,6 +10,11 @@
 @use "auth/login.scss";
 @use "auth/register.scss";
 
+:root {
+  --primary-color: #0D9813;
+  --secondary-color: #003366;
+}
+
 @font-face {
     font-family: "Kanit";
     src: local("KanitThin"),
