--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -90,7 +90,7 @@
     top: 10px;
     left: 10px;
     padding: 5px 15px;
-    border: 1px solid #0D9813;
+    border: 1px solid var(--primary-color);
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
@@ -112,7 +112,7 @@
     bottom: 10px;
     left: 10px;
     padding: 5px 15px;
-    border: 1px solid #0D9813;
+    border: 1px solid var(--primary-color);
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
@@ -155,7 +155,7 @@
 
   .reserve-btn {
     width: 100%;
-    background: #28a745;
+    background: var(--primary-color);
     color: white;
     padding: 10px;
     border: none;
@@ -166,7 +166,7 @@
   }
 
   .reserve-btn:hover {
-    background: #218838;
+    filter: brightness(90%);
   }
 
   .note {
