Adds total pricing and edits some validation for guest selection and checkIn and checkOut

--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -231,4 +231,25 @@
     flex-direction: row;
   }
 
+  .pricing-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .pricing-description-and-price {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .pricing-description {
+    text-align: left;
+  }
+
+  .pricing-price {
+    text-align: right;
+  }
 }
