Adds amenities-title styling.

--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -130,6 +130,7 @@
   }
 
   .details {
+    margin-bottom: 30px;
     color: #666;
   }
 
@@ -251,5 +252,10 @@
 
   .pricing-price {
     text-align: right;
+  }
+
+  .amenities-title {
+    font-size: 18px;
+    font-weight: 400;
   }
 }
