--- a/web/src/features/hostonboarding/styles/onboardingHost.scss
+++ b/web/src/features/hostonboarding/styles/onboardingHost.scss
@@ -1,14 +1,38 @@
-.container {
-  text-align: left;
+$domits-host-blue: #003366;
+$border-radius: 5px;
+$light-gray: #ccc;
+$input-time-gray: #2a2c2d;
+$white: #fff;
+$off-white: #f0f0f0;
+
+/* Headings */
+h2 {
+  text-align: center;
+  flex-wrap: wrap;
 }
 
+.onboardingSectionSubtitle {
+  text-align: center;
+}
+
+/* Divs */
 .map-section {
   min-width: 45%;
 }
 
-h2{
-  text-align: center;
+.flex-row {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 44px;
+  width: 100%;
+}
+
+.form-row {
+  justify-content: space-between;
+  flex-wrap: nowrap;
 }
 
 .textInput {
@@ -20,15 +44,16 @@ h2{
   padding: 11px 15px;
   border-radius: 5px;
 }
+
 .images-container {
   width: 300px;
   height: 300px;
-  border: 1px solid #ccc;
+  border: 1px solid $light-gray;
   border-radius: 5px;
 
   margin-bottom: 15px;
   position: relative;
-  
+
 }
 
 .file-image {
@@ -53,8 +78,8 @@ h2{
 }
 
 .stayMinMaxBox {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .stayMinMaxField {
@@ -73,11 +98,6 @@ h2{
   gap: 1.5vw;
 }
 
-@media (max-width: 768px) {
-  .amenity-groups {
-    grid-template-columns: 1fr;
-  }
-}
 
 .check-box {
   display: grid;
@@ -87,19 +107,8 @@ h2{
   flex-wrap: wrap;
 }
 
-.Check-checkbox{
+.Check-checkbox {
   width: 10rem;
-}
-
-@media (max-width: 400px) {
-  .check-box {
-    grid-template-columns: 1fr; 
-  }
-  
-  .check-box label {
-    display: block;
-    margin-bottom: 0.5rem;
-  }
 }
 
 .delete-button {
@@ -107,8 +116,8 @@ h2{
   top: 5px;
   right: 5px;
   color: black;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: $white;
+  border: 1px solid $light-gray;
   border-radius: 1vh;
   padding: 5px;
   cursor: pointer;
@@ -120,7 +129,7 @@ h2{
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #f0f0f0;
+  background-color: $off-white;
   border-radius: 5px;
   font-size: 0.8rem;
 }
@@ -140,14 +149,17 @@ h2{
   width: 100%;
   height: 100%;
 }
+
 .slider-bar {
   display: flex;
   flex-direction: row;
   gap: 2em;
+
   .priceSlider {
     width: 40vw;
   }
 }
+
 .flex-row {
   width: 100%;
   flex-wrap: wrap;
@@ -175,19 +187,23 @@ h2{
   flex-wrap: wrap;
   margin: auto;
 }
+
 .listing-calendar {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
 .loading {
   display: flex;
   flex-direction: column;
   padding: 10em 20em;
+
   .spinner-text {
     font-weight: bold;
     font-size: 2em;
   }
+
   .spinner {
     width: 20vw;
     height: auto;
@@ -203,6 +219,7 @@ h2{
   justify-items: center;
   align-items: center;
 }
+
 .boat-types {
   padding: 5%;
   margin-bottom: 10%;
@@ -218,6 +235,7 @@ h2{
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 .option {
   display: flex;
   flex-direction: column;
@@ -229,7 +247,7 @@ h2{
 }
 
 .option.selected {
-  border-color: #003366;
+  border-color: $domits-host-blue;
 }
 
 .accommodation-icon {
@@ -243,6 +261,7 @@ h2{
   font-size: 14px;
   text-align: center;
 }
+
 .onboarding-button-box {
   display: flex;
   flex-direction: row;
@@ -250,7 +269,7 @@ h2{
 }
 
 .onboarding-button {
-  background-color: #003366;
+  background-color: $domits-host-blue;
   border: none;
   color: white;
   padding: 12px 24px;
@@ -276,42 +295,50 @@ h2{
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
+
 .guest-access {
   display: flex;
   flex-direction: column;
   align-self: center;
   justify-content: space-between;
   gap: 1.5em;
+
   .guest-access-item {
-    border: 1px solid #003366;
+    border: 1px solid $domits-host-blue;
     border-radius: 1.25em;
     padding: 0 2em;
   }
+
   .guest-access-item-selected {
-    border: 1px solid #003366;
+    border: 1px solid $domits-host-blue;
     border-radius: 1.25em;
     padding: 0 2em;
-    background-color: #003366;
+    background-color: $domits-host-blue;
     color: white;
+
     p {
       color: white;
     }
   }
 }
+
 .onboardingSectionSubtitle {
   text-align: center;
 }
+
 .acco-location {
   display: flex;
   flex-direction: row;
   padding: 1em 7.5vw;
   justify-content: space-evenly;
   gap: 5vw;
+
   .location-left {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 30vw;
+
     .locationText {
       margin-bottom: 10%;
     }
@@ -321,12 +348,12 @@ h2{
 .round-button {
   width: 1.5em;
   /* height: 1.5em; */
-  margin-top: 0px;
-  padding: 0px;
+  margin-top: 0;
+  padding: 0;
   border-radius: 50%;
-  border: 1px solid #003366;
+  border: 1px solid $domits-host-blue;
   background-color: white;
-  color: #003366;
+  color: $domits-host-blue;
   text-align: center;
   line-height: 1.25em;
   font-size: 16px;
@@ -337,24 +364,26 @@ h2{
 }
 
 .round-button:hover {
-  background-color: #003366;
+  background-color: $domits-host-blue;
   color: white;
 }
 
 .guest-amount {
   margin: 0 20%;
   padding: 2em;
-}
-.guest-amount-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  .amount-btn-box {
-    align-self: center;
+
+  .guest-amount-item {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 1vw;
+
+    .amount-btn-box {
+      align-self: center;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 1vw;
+    }
   }
 }
 
@@ -370,9 +399,10 @@ h2{
   justify-content: center;
   padding: 6em 0;
   border-radius: 2em;
-  border: 1px solid #003366;
+  border: 1px solid $domits-host-blue;
   text-align: center;
   margin: 0 20%;
+
   .file-input-thumbnail {
     align-self: center;
   }
@@ -396,43 +426,57 @@ h2{
 .accommodation-title, .accommodation-specification {
   align-self: center;
 }
+
 .accommodation-specification {
   max-width: 50%;
+
   .radioBtn-box, .radioBtn-box-vertical, input {
     margin-bottom: 5%;
   }
+
   .accommodation-general {
     display: flex;
     flex-direction: column;
   }
+
   .accommodation-technical {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 5%;
   }
 }
+
 .radioBtn-box {
   display: flex;
   flex-direction: row;
   justify-content: start;
   gap: 5%;
 }
-#summary {
+
+.summary {
+  //text-align: left; probably not intentional but was assigned to .container before, and .summary was class=container
+  margin: 5rem 7rem 0 7rem;
+
   h3 {
     margin-bottom: 2%;
   }
+
   th {
-    text-align: left;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid $light-gray;
+    text-align: center;
   }
 }
+
 .accommodation-summary {
   width: 100%;
   border-collapse: collapse;
+
   tr {
     margin-bottom: 5%;
+    text-align: justify;
   }
 }
+
 .check-box-vertical {
   display: flex;
   flex-direction: column;
@@ -440,37 +484,42 @@ h2{
   gap: 5%;
   margin-bottom: 10%;
 }
+
 .textInput-field {
   width: 100%;
   padding: 10px;
   font-size: 1rem;
-  border: 1px solid #ccc;
+  border: 1px solid $light-gray;
   border-radius: 5px;
   margin-bottom: 10%;
 }
+
 .acco-price {
   padding: 5%;
   font-weight: bold;
   color: black;
 }
+
 .accommodation-pricing {
   display: flex;
   flex-direction: column;
   align-self: center;
   padding: 2em;
-  border: 3px solid #003366;
+  border: 3px solid $domits-host-blue;
   border-radius: 2em;
   width: 20vw;
   margin-bottom: 1em;
+
   hr {
-    clear:both;
-    display:block;
+    clear: both;
+    display: block;
     width: 96%;
     background-color: black;
     height: 1px;
   }
 }
-.onboardingSectionTitle{
+
+.onboardingSectionTitle {
   margin: 0;
   padding: 0;
 }
@@ -478,11 +527,13 @@ h2{
 .pricing-input {
   width: 20%;
 }
+
 .pricing-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .button-box-last {
   display: flex;
   flex-direction: row;
@@ -490,9 +541,11 @@ h2{
   gap: 1.5em;
   padding: 2em;
 }
+
 .amenity-header {
   text-align: left;
 }
+
 @media (max-width: 640px) {
   .accommodation-types {
     grid-template-columns: repeat(2, 1fr);
@@ -543,10 +596,10 @@ h2{
 .houseRulesContainer {
   background-color: #ededed68;
   border-radius: 10px;
-  max-width: 600px; 
-  height: auto; 
+  max-width: 600px;
+  height: auto;
   padding: 20px;
-  margin: auto; 
+  margin: auto;
 }
 
 .toggle-container {
@@ -579,7 +632,7 @@ h2{
 
 .toggle-switch:before {
   display: block;
-  background: linear-gradient(to bottom, #fff 0%, #eee 100%);
+  background: linear-gradient(to bottom, $white 0%, #eee 100%);
   border-radius: 50%;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
   width: 24px;
@@ -591,7 +644,7 @@ h2{
 }
 
 .toggle-checkbox:checked + .toggle-switch {
-  background: #003366;
+  background: $domits-host-blue;
 }
 
 
@@ -616,12 +669,12 @@ h2{
   flex-wrap: wrap;
   align-items: center;
   margin-top: 30px;
-  
+
 }
 
 input[type="time"] {
   border: none;
-  color: #2a2c2d;
+  color: $input-time-gray;
   font-size: 14px;
   width: 120px;
   padding: 10px;
@@ -635,18 +688,27 @@ input[type="time"] {
   margin-top: 20px;
 }
 
-.verifyCheck{
+.verifyCheck {
   width: 60vw;
   line-height: normal;
 }
 
-.termsCondition{
-  text-decoration:underline;
-  
+.termsCondition {
+  text-decoration: underline;
 }
 
+@media (max-width: 768px) {
+  .amenity-groups {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 400px) {
+  .check-box {
+    grid-template-columns: 1fr;
+  }
 
-
-
-
-
+  .check-box label {
+    display: block;
+    margin-bottom: 0.5rem;
+  }
+}
